--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
 
 #root {
   min-height: inherit;
+  background: inherit;
 }
 
 a {
@@ -36,6 +37,8 @@ body {
   flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+
+  background: #ffffff;
 }
 
 h1,
